<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ffffff">

    <TextView android:text="@string/nanodegree_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="22dp"
        android:textColor="#01579B"
        android:id="@+id/textView"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button1"
            android:id="@+id/button"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_custom"
            android:layout_marginBottom="10dp"
            android:textColor="#ffffff"
            android:onClick="sendMessage"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button2"
            android:id="@+id/button2"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_custom"
            android:layout_marginBottom="10dp"
            android:textColor="#ffffff"
            android:onClick="sendMessage"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button3"
            android:id="@+id/button3"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_custom"
            android:layout_marginBottom="10dp"
            android:textColor="#ffffff"
            android:onClick="sendMessage"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button4"
            android:id="@+id/button4"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_custom"
            android:layout_marginBottom="10dp"
            android:textColor="#ffffff"
            android:onClick="sendMessage"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button5"
            android:id="@+id/button5"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_custom"
            android:layout_marginBottom="10dp"
            android:textColor="#ffffff"
            android:onClick="sendMessage"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button6"
            android:id="@+id/button6"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_custom_orange"
            android:textColor="#ffffff"
            android:onClick="sendMessage"/>
    </LinearLayout>

</RelativeLayout>
